--- a/Mongoose_Express/package.json
+++ b/Mongoose_Express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Data_Relationships_With_Mongo",
+  "name": "Mongoose_Express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^6.0.3"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.13.8"
   }
 }
